--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -60,7 +60,7 @@ TGT_ins8060  = ins8060
 TGT_ins8070  = ins8070
 TGT_mc68000  = mc68000 mc68010 m68k m68k10
 TGT_mc6800   = mc6800 mb8861 mc6801 mc68hc11 hd6301
-TGT_mc6805   = mc68hc05
+TGT_mc6805   = mc68hc05 mc68hc08
 TGT_mc6809   = mc6809 hd6309
 TGT_mn1610   = mn1610 mn1613
 TGT_mos6502  = mos6502 g65sc02 r65c02 w65c02s w65c816
@@ -110,6 +110,7 @@ CPU_mc6800   = 6800
 CPU_mc6801   = 6801
 CPU_mc6809   = 6809
 CPU_mc68hc05 = 68HC05
+CPU_mc68hc08 = 68HC08
 CPU_mc68hc11 = 6811
 CPU_mn1610   = MN1610
 CPU_mn1613   = MN1613
