--- a/examples/mc6809/platformio.ini
+++ b/examples/mc6809/platformio.ini
@@ -13,21 +13,24 @@ src_dir = .
 default_envs = atmega1284p, avr128da, teensy41
 
 [env]
-lib_deps =
-         tgtakaoka/libcli@1.3.0
-         tgtakaoka/libasm@1.6.50
+lib_deps = 
+	tgtakaoka/libcli@1.3.0
+	tgtakaoka/libasm@1.6.50
 
 [env:atmega1284p]
 platform = atmelavr
 board = ATmega1284P
 framework = arduino
+lib_deps = tgtakaoka/libcli@^1.3.0
 
 [env:avr128da]
 platform = atmelmegaavr
 board = AVR128DA48
 framework = arduino
+lib_deps = tgtakaoka/libcli@^1.3.0
 
 [env:teensy41]
 platform = teensy
 board = teensy41
 framework = arduino
+lib_deps = tgtakaoka/libcli@^1.3.0
