[TMS32010] Refactor to support TMS3202x variants

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -149,7 +149,7 @@ S19_OUTS = $(TGT_mc6809) $(TGT_mc6800) $(TGT_mc6805) mos6502 g65sc02 r65c02 w65c
 # targets with Motorola S28 format
 S28_OUTS = $(TGT_mc68000) m68k w65c816 w65c816_m0x0 w65c816_m0x1 w65c816_m1x0 w65c816_m1x1
 # targets with Intel32 (32bit address) format
-I32_OUTS = z8001 z8k1 ns32032 ns32k mn1613
+I32_OUTS = z8001 z8k1 ns32032 ns32k mn1613 tms320c25 tms320c26
 # other targets use Intel8 format
 define __out-ext # target
 $(if $(filter $(1),$(S19_OUTS)),s19,$(if $(filter $(1),$(S28_OUTS)),s28,hex))
