[TMS32010] Add TMS3202x variants

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -69,7 +69,7 @@ TGT_pdp11    = j11 t11
 TGT_pdp8     = im6100 hd6120
 TGT_scn2650  = scn2650
 TGT_tlcs90   = tlcs90
-TGT_tms32010 = tms32010
+TGT_tms32010 = tms32010 tms320c25 tms320c26
 TGT_tms7000  = tms7000
 TGT_tms9900  = tms9900 tms9980 tms9995 tms99105 tms99110
 TGT_z8000    = z8001 z8002 z8k1 z8k2
@@ -124,6 +124,8 @@ CPU_scn2650  = 2650
 CPU_t11      = T11
 CPU_tlcs90   = TLCS90
 CPU_tms32010 = 32010
+CPU_tms320c25 = 320C25
+CPU_tms320c26 = 320C26
 CPU_tms7000  = TMS7000
 CPU_tms9900  = TMS9900
 CPU_tms99105 = TMS99105
