--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -63,7 +63,7 @@ TGT_i8086    = i8086 i80186 i80286 v30
 TGT_i8096    = i8096
 TGT_ins8060  = ins8060
 TGT_ins8070  = ins8070
-TGT_mc68000  = mc68000 mc68010
+TGT_mc68000  = mc68000 mc68010 mc68020
 TGT_mc6800   = mc6800 mb8861 mc6801 mc68hc11 hd6301
 TGT_mc6805   = mc146805 mc68hc05 mc68hc08 mc68hcs08
 TGT_mc6809   = mc6809 hd6309
@@ -116,6 +116,7 @@ CPU_mc68000  = 68000
 CPU_mc6800   = 6800
 CPU_mc68010  = 68010
 CPU_mc6801   = 6801
+CPU_mc68020  = 68020
 CPU_mc6809   = 6809
 CPU_mc68hc05 = 68HC05
 CPU_mc68hc08 = 68HC08
@@ -160,12 +161,14 @@ CPU_z8       = Z8601
 # targets with Motorola S19 format
 S19_OUTS = $(TGT_mc6809) $(TGT_mc6800) $(TGT_mc6805) mc68hc12 mos6502 g65sc02 r65c02 w65c02s
 # targets with Motorola S28 format
-S28_OUTS = $(TGT_mc68000) mc68hc16 w65c816 w65c816_m0x0 w65c816_m0x1 w65c816_m1x0 w65c816_m1x1
+S28_OUTS = mc68000 mc68010 mc68hc16 w65c816 w65c816_m0x0 w65c816_m0x1 w65c816_m1x0 w65c816_m1x1
+# targets with Motorola S37 format
+S37_OUTS = mc68020
 # targets with Intel32 (32bit address) format
 I32_OUTS = $(TGT_i8086) $(TGT_mn1610) z180 z280 z380 z8001 ns32032 tms320c25 tms320c26
 # other targets use Intel8 format
 define __out-ext # target
-$(if $(filter $(1),$(S19_OUTS)),s19,$(if $(filter $(1),$(S28_OUTS)),s28,hex))
+$(if $(filter $(1),$(S19_OUTS)),s19,$(if $(filter $(1),$(S28_OUTS)),s28,$(if $(filter $(1),$(S37_OUTS)),s37,hex)))
 endef
 define out-ext # file
 $(call __out-ext,$(subst gen_,,$(subst test_,,$(1))))
