--- a/examples/i8048/platformio.ini
+++ b/examples/i8048/platformio.ini
@@ -21,13 +21,16 @@ lib_deps =
 platform = atmelavr
 board = ATmega1284P
 framework = arduino
+lib_deps = tgtakaoka/libcli@^1.4.2
 
 [env:avr128da]
 platform = atmelmegaavr
 board = AVR128DA48
 framework = arduino
+lib_deps = tgtakaoka/libcli@^1.4.2
 
 [env:teensy41]
 platform = teensy
 board = teensy41
 framework = arduino
+lib_deps = tgtakaoka/libcli@^1.4.2
