--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -35,6 +35,7 @@ ARCHS = \
 	scn2650  \
 	tlcs90   \
 	tms32010 \
+	tms370   \
 	tms7000  \
 	tms9900  \
 	z8       \
@@ -70,6 +71,7 @@ TGT_pdp8     = im6100 hd6120
 TGT_scn2650  = scn2650
 TGT_tlcs90   = tlcs90
 TGT_tms32010 = tms32010 tms320c25 tms320c26
+TGT_tms370   = tms370
 TGT_tms7000  = tms7000
 TGT_tms9900  = tms9900 tms9980 tms9995 tms99105 tms99110
 TGT_z8000    = z8001 z8002
@@ -123,6 +125,7 @@ CPU_tlcs90   = TLCS90
 CPU_tms32010 = 32010
 CPU_tms320c25 = 320C25
 CPU_tms320c26 = 320C26
+CPU_tms370   = TMS370
 CPU_tms7000  = TMS7000
 CPU_tms9900  = TMS9900
 CPU_tms99105 = TMS99105
