[i8080] Cleanup Zilog syntax test rules

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -53,7 +53,7 @@ TGT_cdp1802  = cdp1802 cdp1804 cdp1804a
 TGT_f3850    = f3850
 TGT_i8048    = i8039 i8048 i80c39 i80c48 msm80c39 msm80c48
 TGT_i8051    = i8051
-TGT_i8080    = i8080 i8085 v30emu i8080_z80syn i8085_z80syn v30emu_z80syn
+TGT_i8080    = i8080 i8085 v30emu
 TGT_i8086    = i8086 i80186 v30
 TGT_i8096    = i8096
 TGT_ins8060  = ins8060
@@ -90,9 +90,7 @@ CPU_i8039    = 8039
 CPU_i8048    = 8048
 CPU_i8051    = 8051
 CPU_i8080    = 8080
-CPU_i8080_z80syn = 8080
 CPU_i8085    = 8085
-CPU_i8085_z80syn = 8085
 CPU_i8086    = 8086
 CPU_i8096    = 8096
 CPU_i80c39   = 80C39
@@ -135,7 +133,6 @@ CPU_tms99110 = TMS99110
 CPU_tms9980  = TMS9980
 CPU_tms9995  = TMS9995
 CPU_v30emu   = V30EMU
-CPU_v30emu_z80syn = V30EMU
 CPU_v30      = V30
 CPU_w65c02s  = W65C02S
 CPU_w65c816  = 65816
