[TEST] Cleanup GNU assembler test rules

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -58,13 +58,13 @@ TGT_i8086    = i8086 i80186 v30
 TGT_i8096    = i8096
 TGT_ins8060  = ins8060
 TGT_ins8070  = ins8070
-TGT_mc68000  = mc68000 mc68010 m68k m68k10
+TGT_mc68000  = mc68000 mc68010
 TGT_mc6800   = mc6800 mb8861 mc6801 mc68hc11 hd6301
 TGT_mc6805   = mc146805 mc68hc05 mc68hc08 mc68hcs08
 TGT_mc6809   = mc6809 hd6309
 TGT_mn1610   = mn1610 mn1613
 TGT_mos6502  = mos6502 g65sc02 r65c02 w65c02s w65c816
-TGT_ns32000  = ns32000 ns32k
+TGT_ns32000  = ns32000
 TGT_pdp11    = j11 t11
 TGT_pdp8     = im6100 hd6120
 TGT_scn2650  = scn2650
@@ -72,7 +72,7 @@ TGT_tlcs90   = tlcs90
 TGT_tms32010 = tms32010 tms320c25 tms320c26
 TGT_tms7000  = tms7000
 TGT_tms9900  = tms9900 tms9980 tms9995 tms99105 tms99110
-TGT_z8000    = z8001 z8002 z8k1 z8k2
+TGT_z8000    = z8001 z8002
 TGT_z80      = z80 z180
 TGT_z8       = z8 z86c z88
 
@@ -99,8 +99,6 @@ CPU_im6100   = 6100
 CPU_ins8060  = SC/MP
 CPU_ins8070  = 8070
 CPU_j11      = J11
-CPU_m68k10   = 68010
-CPU_m68k     = 68000
 CPU_mb8861   = MB8861
 CPU_mc146805 = 146805
 CPU_mc68000  = 68000
@@ -118,7 +116,6 @@ CPU_mos6502  = 6502
 CPU_msm80c39 = MSM80C39
 CPU_msm80c48 = MSM80C48
 CPU_ns32000  = NS32032
-CPU_ns32k    = NS32032
 CPU_r65c02   = 65C02
 CPU_scn2650  = 2650
 CPU_t11      = T11
@@ -142,8 +139,6 @@ CPU_z8002    = Z8002
 CPU_z80      = Z80
 CPU_z86c     = Z86C40
 CPU_z88      = Z88C00
-CPU_z8k1     = Z8001
-CPU_z8k2     = Z8002
 CPU_z8       = Z8601
 
 # targets with Motorola S19 format
