--- a/test/autogen/Makefile
+++ b/test/autogen/Makefile
@@ -27,40 +27,43 @@ help:
 .PHONY:: clean clean-gen clean-asm clean-asl clean-gas
 
 # target which has ".inc" suffix for output.
-INC_targets  = \
-    w65c816 tlcs90 i8086 i80186 v30 \
-    mc68000 mc68010 m68k m68k10 z8001 z8002 z8k1 z8k2 ns32000 ns32k \
-    mn1610 mn1613 tms7000 tms9980 j11 t11 mc146805
-# target which for GNU assembler
-GAS_targets  = m68k m68k10 z8k1 z8k2 ns32k
+INC_targets = w65c816 tlcs90 i8086 i80186 v30 \
+    mc68000 mc68010 z8001 z8002 ns32000 mn1610 mn1613 \
+    tms7000 tms9980 j11 t11 mc146805
+# target which for GNU assembler (also ".ginc" targets)
+GINC_targets  = mc68000 mc68010 z8001 z8002 ns32000
 # target which also has Zilog syntax (also ".zinc" targets)
 ZINC_targets = i8080 i8085 v30emu
 
 # file name of generating file
 define out-inc # target
-$(filter $(1),$(INC_targets) $(ZINC_targets:%=%_zinc))
+$(filter $(1),$(INC_targets) $(ZINC_targets:%=%_inc))
 endef
 define gen-out # target
+$(if $(filter $(1),$(GINC_targets:%=%_ginc)),gen_$(1:%_ginc=%).ginc,\
 $(if $(filter $(1),$(ZINC_targets:%=%_zinc)),gen_$(1:%_zinc=%).zinc,\
-$(if $(call out-inc,$(1)),gen_$(1).inc,gen_$(1).asm))
+$(if $(call out-inc,$(1)),gen_$(1).inc,gen_$(1).asm)))
 endef
 
 # generator options
-define gas-out
-$(filter $(1),$(GAS_targets))
+define ginc-out
+$(filter $(1),$(GINC_targets:%=%_ginc))
 endef
 define zinc-out
 $(filter $(1),$(ZINC_targets:%=%_zinc))
 endef
 define gen-opt
-$(if $(call gas-out,$(1)),-g,$(if $(call out-inc,$(1)),-i -u,-u)) \
+$(if $(call ginc-out,$(1)),-g -i,$(if $(call out-inc,$(1)),-i -u,-u)) \
 $(if $(call zinc-out,$(1)),-z)
 endef
 define arch-target # arch
-$(foreach t,$(TGT_$(1)),$(t) $(if $(filter $(t),$(ZINC_targets)),$(t)_zinc))
+$(foreach t,$(TGT_$(1)),$(t) \
+  $(if $(filter $(t),$(ZINC_targets)),$(t)_zinc) \
+  $(if $(filter $(t),$(GINC_targets)),$(t)_ginc))
 endef
 define cpu-opt # out
-$(if $(call zinc-out,$(1)),-C $(CPU_$(1:%_zinc=%)),-C $(CPU_$(1)))
+$(if $(call zinc-out,$(1)),-C $(CPU_$(1:%_zinc=%)),\
+$(if $(call ginc-out,$(1)),-C $(CPU_$(1:%_ginc=%)),-C $(CPU_$(1))))
 endef
 
 # make rule for auto generation file
@@ -129,8 +132,8 @@ clean-asl:
 
 
 GAS_TESTS = $(wildcard gen_*.gas)
-GAS_OUTS  = $(foreach f,$(GAS_TESTS),$(f:.gas=).$(call out-ext,$(f:.gas=)))
-gas-test: clean-gas $(GAS_OUTS)
+GAS_OUTS    = $(foreach f,$(GAS_TESTS),$(f:.gas=).$(call out-ext,$(f:.gas=)))
+gas-test: clean-gas $(GAS_OUTS:%=gas-%)
 clean-gas:
 	-rm -f $(GAS_OUTS)
 
