--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -27,6 +27,7 @@ ARCHS = \
 	mc68000  \
 	mc6805   \
 	mc6809   \
+	mc68hc12 \
 	mn1610   \
 	mos6502  \
 	ns32000  \
@@ -63,6 +64,7 @@ TGT_mc68000  = mc68000 mc68010
 TGT_mc6800   = mc6800 mb8861 mc6801 mc68hc11 hd6301
 TGT_mc6805   = mc146805 mc68hc05 mc68hc08 mc68hcs08
 TGT_mc6809   = mc6809 hd6309
+TGT_mc68hc12 = mc68hc12
 TGT_mn1610   = mn1610 mn1613
 TGT_mos6502  = mos6502 g65sc02 r65c02 w65c02s w65c816
 TGT_ns32000  = ns32000
@@ -111,6 +113,7 @@ CPU_mc6809   = 6809
 CPU_mc68hc05 = 68HC05
 CPU_mc68hc08 = 68HC08
 CPU_mc68hc11 = 6811
+CPU_mc68hc12 = 68HC12
 CPU_mc68hcs08 = 68HCS08
 CPU_mn1610   = MN1610
 CPU_mn1613   = MN1613
