--- a/test/autogen/Makefile
+++ b/test/autogen/Makefile
@@ -27,11 +27,12 @@ help:
 .PHONY:: clean clean-gen clean-asm clean-asl clean-gas
 
 # target which has ".inc" suffix for output.
-INC_targets = w65c816 tlcs90 i8086 i80186 v30 \
+INC_targets = w65c816 tlcs90 i8086 i80186 \
     mc68000 mc68010 z8001 z8002 ns32000 mn1610 mn1613 \
     tms370 tms7000 tms9980 j11 t11 mc146805 z80 z180
 # target which for GNU assembler (also ".ginc" targets)
-GINC_targets  = mc68000 mc68010 z8001 z8002 ns32000 mc68hc11 mc68hc12
+GINC_targets  = mc68000 mc68010 z8001 z8002 ns32000 mc68hc11 mc68hc12 \
+    i8086 i80186
 # target which also has Zilog syntax (also ".zinc" targets)
 ZINC_targets = i8080 i8085 v30emu
 
@@ -113,7 +114,7 @@ asm-test: $(ASM)-refresh clean-asm $(ASM_OUTS:%=asm-%)
 clean-asm:
 	-rm -f $(ASM_OUTS)
 
-ASL_exclude = gen_mb8861 gen_i8086
+ASL_exclude = gen_mb8861
 ASL_SRCS = $(foreach t,$(ASM_TESTS),$(if $(filter $(t),$(ASL_exclude)),,$(t)))
 ASL_TESTS = $(ASL_SRCS) \
 	$(foreach t,$(patsubst %.asl,%,$(wildcard gen_*.asl)),$(if $(filter $(t),$(ASL_SRCS)),,$(t)))
