[WIP] [i8086] Add i80386 disassembler

--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -60,7 +60,7 @@ TGT_f3850    = f3850
 TGT_i8048    = i8039 i8048 i80c39 i80c48 msm80c39 msm80c48
 TGT_i8051    = i8051
 TGT_i8080    = i8080 i8085 v30emu
-TGT_i8086    = i8086 i80186 i80286 v30
+TGT_i8086    = i8086 i80186 i80286 i80386 v30
 TGT_i8096    = i8096 i80196
 TGT_ins8060  = ins8060
 TGT_ins8070  = ins8070
@@ -99,6 +99,7 @@ CPU_hd6301   = 6301
 CPU_hd6309   = 6309
 CPU_i80186   = 80186
 CPU_i80286   = 80286
+CPU_i80386   = 80386
 CPU_i8039    = 8039
 CPU_i8048    = 8048
 CPU_i8051    = 8051
