--- a/src/Makefile.arch
+++ b/src/Makefile.arch
@@ -40,6 +40,7 @@ ARCHS = \
 	tms370   \
 	tms7000  \
 	tms9900  \
+	z280     \
 	z380     \
 	z8       \
 	z80      \
@@ -79,9 +80,10 @@ TGT_tms320   = tms32010 tms320c25 tms320c26
 TGT_tms370   = tms370
 TGT_tms7000  = tms7000
 TGT_tms9900  = tms9900 tms9980 tms9995 tms99105 tms99110
+TGT_z280     = z280
 TGT_z380     = z380
 TGT_z8000    = z8001 z8002
-TGT_z80      = z80 z180 z280
+TGT_z80      = z80 z180
 TGT_z8       = z8 z86c z88
 
 # CPU for each target
