--- a/.github/workflows/platformio-ci.yml
+++ b/.github/workflows/platformio-ci.yml
@@ -38,13 +38,19 @@ jobs:
           - ins8070
           - mc6800
           - mc68000
+          - mc6805
           - mc6809
+          - mc68hc12
+          - mc68hc16
           - mn1610
           - mos6502
           - ns32000
+          - pdp11
+          - pdp8
           - scn2650
           - tlcs90
           - tms32010
+          - tms370
           - tms7000
           - tms9900
           - z8
