[Z280] Fix missing and sprious instructions
- Add test reference source
- Add missing ADD/ADC/SUB/SBC/AND/XOR/OR/CP A, (abs) in DD-page
- Take precedence on 8-bit disp than 16-bit disp of LD HL,(ix+disp)
  and LD (ix+disp),HL instructions
- Remove sprious instruction LD HL,(abs) and LD (abs),HL in ED-page

--- a/test/autogen/Makefile
+++ b/test/autogen/Makefile
@@ -36,7 +36,7 @@ ZINC_targets = i8080 i8085 v30emu
 # target which doesn't need ".asm"
 NOASM_targets = i80286
 # target which ASL could not assemble
-ASL_exclude = gen_mb8861 gen_i80286 gen_z280
+ASL_exclude = gen_mb8861 gen_i80286
 
 # file name of generating file
 define out-inc # target
